VulnVersion/tests/vet_taxonomy_corpus/work/ImageMagick/CVE-2022-32547/step1/fix_evidence/eac8ce4d873f/commit_message.txt
commit eac8ce4d873f28bb6a46aa3a662fb196b49b95d0
Author:     xiaoxiaoafeifei <lliangliang2007@163.com>
AuthorDate: Sat Apr 9 20:34:03 2022 +0800
Commit:     GitHub <noreply@github.com>
CommitDate: Sat Apr 9 08:34:03 2022 -0400

    fix #5033: runtime error: load of misaligned address (#5034)
    
    * fix Division by zero in XMenuWidget() of MagickCore/widget.c
    
    * Fix memory leak in AnimateImageCommand() of MagickWand/animate.c and DisplayImageCommand() of MagickWand/display.c
    
    * fix Division by zero in ReadEnhMetaFile() of coders/emf.c
    
    * Resolve conflicts
    
    * fix issue: outside the range of representable values of type 'unsigned char' at coders/psd.c:1025
    
    * fix error: 4e+26 is outside the range of representable values of type 'unsigned long' at coders/pcl.c:299
    
    * fix #5033:runtime error: load of misaligned address
    
    Co-authored-by: zhailiangliang <zhailiangliang@loongson.cn>
